--- a/Shop/Shop.WebUI/Web.config
+++ b/Shop/Shop.WebUI/Web.config
@@ -21,6 +21,16 @@
     </compilation>
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+  <system.web>
+    <authentication mode="Forms">
+<forms loginUrl="~/Account/Login" timeout="2880">
+ <credentials passwordFormat="Clear">
+ <user name="admin" password="secret" />
+ </credentials>
+ </forms>
+    </authentication>
+  </system.web>
+    
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
